--- a/ansible/roles/infra/tasks/setup_backup.yml
+++ b/ansible/roles/infra/tasks/setup_backup.yml
@@ -1,16 +1,16 @@
 ---
 - name: "Install duplicity"
-  apt:
+  ansible.builtin.apt:
     pkg: [lftp, duplicity]
     state: present
     update_cache: true
     cache_valid_time: 3600
 
 - name: "Create local backup before update"
-  shell: "tar cvpzf /home/{{ USER_NAME }}/data_{{ IDENTITY }}_ansible_backup.tar.gz /{{ DATACORE }}"
+  ansible.builtin.shell: "tar cvpzf /home/{{ USER_NAME }}/data_{{ IDENTITY }}_ansible_backup.tar.gz /{{ DATACORE }}"
 
 - name: "Copy backup task template in cron.d"
-  copy:
+  ansible.builtin.copy:
     src: files/backup/backup_cron_base.sh
     dest: /etc/cron.d/duplicity.full
     owner: root
@@ -18,17 +18,17 @@
     mode: 0500
 
 - name: "Add the line to backup the datacore in the cron script"
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/cron.d/duplicity.full
     line: "PASSPHRASE='{{ BACKUP_PASS }}' duplicity full -v 9 --rsync-options='-p' /{{ DATACORE }} 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ IDENTITY }}'"
 
 - name: "Add a line to delete old backups in the cron script"
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/cron.d/duplicity.full
     line: "PASSPHRASE='{{ BACKUP_PASS }}' duplicity remove-all-but-n-full 3 --force 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ IDENTITY }}'"
 
 - name: "Add full backup task in crontab"
-  cron:
+  ansible.builtin.cron:
     name: full duplicity
     minute: "0"
     hour: "5"
@@ -36,9 +36,9 @@
     job: /etc/cron.d/duplicity.full
 
 - name: "Create initial remote backup before update in '{{ IDENTITY }}'"
-  shell: "/etc/cron.d/duplicity.full"
+  ansible.builtin.shell: "/etc/cron.d/duplicity.full"
   when: BACKUP_MODE == "create"
 
 - name: "Restore last remote backup before recontruction from '{{ IDENTITY }}'"
-  shell: "rm -rf /{{ DATACORE }} && PASSPHRASE='{{ BACKUP_PASS }}' duplicity restore --rsync-options='-p' 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ IDENTITY }}' /{{ DATACORE }}"
+  ansible.builtin.shell: "rm -rf /{{ DATACORE }} && PASSPHRASE='{{ BACKUP_PASS }}' duplicity restore --rsync-options='-p' 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ IDENTITY }}' /{{ DATACORE }}"
   when: BACKUP_MODE == "restore"
